06-statefulset-headless/01-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: application
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: application
  serviceName: application-headless # since it's a statefulset, serviceName is required. This service must be headless, i.e. ClusterIP: none
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: application
          image: nginx:1.23.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/ 
      volumes:
        - name: html-template
          configMap:
            name: nginx-template
        - name: html
          emptyDir: {}
  volumeClaimTemplates: # used by statefulsets to create volumes
    - metadata:
        name: ss-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        #storageClassName: "postgres"
        resources:
          requests:
            storage: "1Gi"
